--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"API tests would go here\" && exit 0",
+    "lint": "echo \"API linting would go here\" && exit 0"
   },
   "dependencies": {
     "express": "^4.18.2",
